samples/_failures_safe/1761668830_13c1a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7bfab6c4.c: In function ‘main’:
./samples/SAFE/__tmp_7bfab6c4.c:192:5: error: expected declaration or statement at end of input
  192 |     printf("----\t\t-----\n");
      |     ^~~~~~
